# kf

./: .gitignore  CMakeLists.txt  EKF.cpp  KalmanFilter.cpp  KalmanFilter.h  LinearKF.cpp  Makefile  README.md  kalmanfilter.pc.in  main.cpp
KalmanPy/: eval_kalman_filter.py  kalman_filter.py  simulate_model.py  simulation_data.json
UnitTests/: CMakeLists.txt  test.cpp
include/: AutoDiffWrapper.h  EKF.h  ExtendedKalmanFilter.h  KF.h  LinearKF.h
src/: EKF.cpp  KalmanFilter.cpp  LinearKF.cpp
